<resources>


    <string name="app_name">CodeMission</string>
    <string name="user">Użytkownik</string>
    <string name="play">Graj</string>
    <string name="leaderboard">Tablica WYnikow</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="home">Home</string>
    <string name="Registration">Registration</string>
    <string name="errorMessage">Konto o podanym adresie e-mail już istnieje</string>
    <string name="HintPassword">Haslo</string>
    <string name="HintEmail">Adres Email</string>
    <string name="HintRepeatPassword">Powtorz haslo</string>
    <string name="PasswordRequirments">Haslo musi zawierać :</string>
    <string name="PrivacyPolicy">Korzystając z naszej aplikacji, zobowiązujesz się do przestrzegania jej regulaminu. Regulamin określa zasady korzystania z aplikacji oraz Twoje prawa i obowiązki jako użytkownika.</string>
    <string name="Newsletter" />
    <string name="NewsletterAgreement">"Chcę otrzymywać informacje i wiadomości newsletter "</string>
    <string name="errorPrivacyPolicyAgreement">"Warunkiem koniecznym jest akceptacka regulaminu !" </string>
    <string name="PasswordRequirmentsLength">Minimum 8 znaków</string>
    <string name="PasswordRequirmentsLetter">Mała i wielka litera</string>
    <string name="PasswordREquirmentsNumber">Minimum jedna cyfra</string>
    <string name="PasswordRequirmentsSpecialSign">Znak specjalny (np. @)</string>
    <string name="SignUpBtnAction">Zarejestruj</string>
    <string name="btnSignUp">Zarejestruj</string>
    <string name="btnNextVerify">Potwierdz</string>
    <string name="btnSendCodeAgain">Wyślij kod ponownie</string>
    <string name="VerificationSucces">Weryfikacja się powiodła</string>
    <string name="btnNextNavigation">Dalej</string>
    <string name="AppLogoHeadline">CodeMission</string>
    <string name="subtitleApp">Wyrusz w niesamowitą podróż.</string>
    <string name="ForgottenPasswordReset">Zapomniałeś hasała ?</string>
    <string name="ContinuewithGoogle">Kontynuuj z Google</string>
    <string name="ContinuewithFacebook">Kontynuuj z Facebook</string>
    <string name="SingInEmailisExists">Nie ma takiego konta</string>
    <string name="messageValidationPassword">Hasło jest nie poprawne.</string>
    <string name="textViewHeadlinePageSettings">Ustawienia</string>
    <string name="settingsEditPassowrd">Zmień hasło</string>
    <string name="settingsEditEmail">settingsEditEmail</string>
    <string name="settingsEmail">Zmień email</string>
    <string name="settingsConnectedAcc">Połączone konta</string>
    <string name="settingsAgreemenetManagment">Zarządzaj zgodami</string>
    <string name="settingsCustom">DOSTOSUJ</string>
    <string name="settingsLanguage">"Język: "</string>
    <string name="settingsTheme">Wygląd</string>
    <string name="settingModeNight">Noc</string>
    <string name="settingModeDay">Dzień</string>
    <string name="settingNotification">POWIADOMIENIA</string>
    <string name="settingsNotificationReminder">Przypomnienie o nauce</string>
    <string name="settingsNotificationCommentsReply">Odpowiedzi na komentarze</string>
    <string name="settingsNotificationNewMessages">Nowe wiadomości</string>
    <string name="settingsEditAccount">EDYTUJ DANE</string>
    <string name="settingLanguage">Polski</string>
    <string name="settingsResetProgress">Zresetuj mój progres</string>
    <string name="settingsDeleteAcc">Usuń konto</string>
    <string name="settingsSinngOut">Wyloguj</string>
    <string name="hintCurrentPassword">Obecne hasło</string>
    <string name="errorMessageIncorrectPassword">Nie prawidłowe hasło !</string>
    <string name="resetPassowrd">Zresetuj hasło</string>
    <string name="headlineChangePassword">Zmień hasło</string>
    <string name="navigationConfirm">Potwierdz</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="errorMessagePickOtherEmail">Istnieje konto powiązane z danych adresem email. Wybierz inny</string>
    <string name="registrationForm">Rejestracja</string>
    <string name="btnNavigationSinin">Zaloguj</string>
    <string name="continueFb">Kontynuuj przez Facebook</string>
    <string name="followingTxt">Obserwujący</string>
    <string name="followersTxt">Obserwowani</string>
    <string name="headlineAchievements">Osiągnięcia</string>
    <string name="headlineShowAll">Zobacz wszytskie</string>
    <string name="defaultTxtUsername">\@Username</string>
    <string name="lv">LV</string>
    <string name="profileDateMyprofile">"Na misji od "</string>
    <string name="team">Drużyna</string>
    <string name="defaultEmpty">-</string>
    <string name="defaultLv">0</string>
    <string name="addFriends">Dodaj znajomych</string>
    <string name="totalXp">Zdobyte XP</string>
    <string name="defaultnumber">0</string>
    <string name="followers">Obserwujący</string>
    <string name="following">Obserwowani</string>
    <string name="headlineProfile">Profile</string>
    <string name="streak">Streak</string>
    <string name="selectLanguage">Select language:</string>

    <string name="welcome_title1">Witamy w  CODE  MISSION !</string>
    <string name="welcome_message1"> Nauka programowania jeszcze nigdy nie była tak prosta i przyjemna. Zdobądź niezbędne umiejętności, krok po kroku! </string>
    <string name="welcome_title2">Jak korzystać z aplikacji?</string>
    <string name="welcome_message2"> Nauka programowania jeszcze nigdy nie była tak prosta i przyjemna. Zdobądź niezbędne umiejętności, krok po kroku! </string>
    <string name="welcome_title3">Rankingi i osiągnięcia:</string>
    <string name="welcome_message3"> Nauka programowania jeszcze nigdy nie była tak prosta i przyjemna. Zdobądź niezbędne umiejętności, krok po kroku! </string>
    <string name="welcome_title4">Rankingi i osiągnięcia:</string>
    <string name="welcome_message4"> Nauka programowania jeszcze nigdy nie była tak prosta i przyjemna. Zdobądź niezbędne umiejętności, krok po kroku! </string>
    <string name="next">Dalej</string>
    <string name="finish">Koniec</string>
    <string name="resetPasswordDescription">Proszę wpisz swój email lub username</string>
    <string name="ResetPasswordAccountDoesntExist">Konto nie istnieje !</string>
    <string name="ResetPasswordNavigation">Potwierdz</string>
    <string name="ResetPasswordSendCodeAgain">Wyślij kod ponownie</string>
    <string name="verifyCodeError">Kod weryfikacyjny jest nie poprawny</string>
    <string name="resetPasswordheadline">Zresetuj Hasło</string>
    <string name="verificationDescription">Proszę wpisz kod weryfikacyjny, który otrzymałeś na swojego emaila</string>
    <string name="errorMessageCodeValidation">Nie poprawny kod !</string>
    <string name="haslo">Hasło</string>
    <string name="SingInNavigation">Zaloguj</string>
    <string name="Zarejestruj">Zarejestruj</string>
    <string name="default_notification_channel_id">testowa wiadomosc hello ziemia</string>
    <string name="errorMessagePickLanguage">Nie wybrano języka</string>
    <string name="UnlinkedAccount">Wyłącz</string>
    <string name="SettingsHeadlineGoogleAcc">Konto Google</string>
    <string name="SettingsfacebookAcc">Konto Facebook</string>
    <string name="SettingLinkedAccDescription">To są konta społecznościowe, które połączyłeś z kontem CodeMission w celu logowania. Masz możliwość wyłączenia dostępu do tych kont tutaj.</string>
    <string name="headlineConnectedAcc">Polączone konta</string>



    <string name="defaultRankings">Rankingi</string>
    <string name="defaultSeeMore">Więcej</string>
    <string name="valTotalXP">Zdobyte XP</string>
    <string name="defaultXPNum">0</string>
    <string name="valStreakNumber">Streak</string>
    <string name="defaultStreakNumber">0</string>
    <string name="valFollowing">Obserwuje</string>
    <string name="defaultFollowersNumber">Obserwujący 0</string>
    <string name="defaultAchievements">Osiągnięcia</string>
    <string name="headlineMore">Więcej</string>

    <string name="web_client_id">469480925344-677a4bhbraecmoq8p1f5q265j2mp81es.apps.googleusercontent.com</string>

</resources>