<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headlineChangePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        android:textColor="@color/formText"
        android:textSize="12dp"
        />

    <EditText
        style="@style/margin"
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:drawableRight="@drawable/eye_icon_selector"
        android:ems="10"
        android:hint="@string/hintCurrentPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/formText"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PasswordRequirments"
        android:textColor="@color/formText"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/tvLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/PasswordRequirmentsLength"
        android:textColor="@color/formText"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvNumbers"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/tvNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PasswordREquirmentsNumber"
        android:textColor="@color/formText"
        android:textSize="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <TextView
        android:id="@+id/tvLetters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PasswordRequirmentsLetter"
        android:textColor="@color/formText"
        android:textSize="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvSpecialSign"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLength"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/tvSpecialSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PasswordRequirmentsSpecialSign"
        android:textColor="@color/formText"
        android:textSize="10dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumbers"
        app:layout_constraintVertical_bias="0.034" />

    <Button
        android:id="@+id/buttonNavConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/margin"
        android:background="@drawable/primary_button_background"
        android:text="@string/navigationConfirm"
        android:textColor="@color/primary_button_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>