<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:textColor="@color/formText"
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headlineChangePassword"

        android:textSize="12dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/errorMessageIncorectPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errorMessageIncorrectPassword"
        android:textColor="@color/formText"
        android:textSize="12dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPassowrd"
        android:textColor="@color/formText"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        style="@style/margin"
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:textSize="16sp"
        android:drawableRight="@drawable/eye_icon_selector"
        android:ems="10"
        android:hint="@string/hintCurrentPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@android:color/white"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"

        android:textColorHint="@color/formText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <Button

        android:id="@+id/buttonNavConfirm"

        style="@style/margin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_button_background"
        android:text="@string/btnNextVerify"
        android:textColor="@color/primary_button_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />
</androidx.constraintlayout.widget.ConstraintLayout>