<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/margin"
    android:paddingTop="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/selectLanguage"
            android:textColor="@color/headline"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/errorMessagePickLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/errorMessagePickLanguage"
            android:textColor="@color/text_common"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/language_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/primary_button_background"
            android:text="@string/btnNextVerify"
            android:textColor="@color/primary_button_text_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>